Added logging in
