# src/interfaces/requests/login_request_body/login_request_body.ts
@@ -1,0 +1,5 @@
+export interface LoginReqBody {
+  email: string;
+  name: string;
+  password: string;
+}
