# src/interfaces/responses/login_response/login_response.ts
@@ -1,0 +1,6 @@
+import { IUserData } from "../../user/user";
+import { Res } from "../response";
+
+export interface LoginRes extends Res {
+  data?: Pick<IUserData, "_id" | "active" | "email" | "name">;
+}
